...
            }, label: {
                #if os(macOS)
                Text("＋")
                #else
                Image(systemName: "plus.circle.fill")
                    .font(.title)
                    .accessibility(label: Text("Add"))
                #endif
            })
            .sheet(isPresented: self.$isTransactionDetailPresented) {
                TransactionDetailView(transaction: nil, appState: self.appState)
            }
        }
...
